--- a/Azmoonak/Views/Account/Register.cshtml
+++ b/Azmoonak/Views/Account/Register.cshtml
@@ -5,32 +5,56 @@
     Layout = "~/Views/Shared/_AccountLayout.cshtml";
 }
 
-<div class="account-form col-md-4 col-sm-6 col-11 mt-5">
-    <form asp-controller="account" asp-action="register">
-        <h1>Register</h1>
-        <hr class="w-75" />
-        <div asp-validation-summary="ModelOnly" class="text-warning"></div>
-        <div class="form-group">
-            <label asp-for="Mobile" class="control-label"></label>
-            <input asp-for="Mobile" class="form-control" />
-            <span asp-validation-for="Mobile" class="text-warning"></span>
+<form asp-controller="account" asp-action="register">
+    <div class="container d-flex justify-content-center align-items-center min-vh-100">
+        <div class="row border rounder-5 p-3 bg-white shadow box-area">
+            <div class="col-md-6 rounded-4 d-flex justify-content-center align-items-center flex-column left-box" style="background: #0568fd">
+                <div class="featured-image mb-3">
+                    <img style="width: 250px;" src="~/Image/LoginRegister/Register.png" class="img-fluid">
+                </div>
+                <p class="text-white fs-2" style="font-weight: 600;">Sign Up</p>
+                <small class="text-white text-wrap text-center" style="width: 17rem;">باید یه متن جدید اضافه کنم</small>
+            </div>
+
+            <div class="col-md-6 right-box">
+                <div class="row align-items-center">
+                    <div class="header-text mb-4 text-center">
+                        <h2>Register Page</h2>
+                    </div>
+                    <div class="input-group mb-3">
+                        <input asp-for="FName" class="form-control form-control-lg bg-light fs6" placeholder="First Name">
+                    </div>
+                    <div class="input-group mb-3">
+                        <input asp-for="LName" class="form-control form-control-lg bg-light fs6" placeholder="Last Name">
+                    </div>
+                    <div class="input-group mb-3">
+                        <input asp-for="Mobile" class="form-control form-control-lg bg-light fs6" placeholder="Phone Number">
+                    </div>
+                    <span asp-validation-for="Mobile" class="text-warning"></span> <!--Error-->
+                    <div class="input-group mb-3">
+                        <input asp-for="Password" class="form-control form-control-lg bg-light fs6" placeholder="Your Password">
+                    </div>
+                    <span asp-validation-for="Password" class="text-warning"></span>
+                    <div class="input-group mb-1">
+                        <input asp-for="RePassword" class="form-control form-control-lg bg-light fs6" placeholder="RePassword">
+                    </div>
+                    <span asp-validation-for="RePassword" class="text-warning"></span>
+
+                    <div class="inpute-group mb-3 mt-3">
+                        <button type="submit" class="btn btn-lg btn-primary w-100 fs-6">Sign Up</button>
+                    </div>
+                    <div class="row">
+                        <small>Do you have account? <a asp-action="Login">Login</a></small>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="form-group">
-            <label asp-for="Password" class="control-label"></label>
-            <input asp-for="Password" class="form-control" />
-            <span asp-validation-for="Password" class="text-warning"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="RePassword" class="control-label"></label>
-            <input asp-for="RePassword" class="form-control" />
-            <span asp-validation-for="RePassword" class="text-warning"></span>
-        </div>
-        <div class="form-group">
-            <button type="submit" class="form-control">register</button>
-            <hr class="w-75" />
-            <a asp-action="login"><span class="fa fa-user-plus"></span>Login</a>
-        </div>
-    </form>
-</div>
+    </div>
+</form>
+
+
+
+
+
 
 
