--- a/Azmoonak/Views/Home/BodyPartial.cshtml
+++ b/Azmoonak/Views/Home/BodyPartial.cshtml
@@ -38,7 +38,7 @@
     <div class="gettingStartedguide text-end started">
         <h2>آزمون مورد نظر خودت رو راحت تر پیدا کن</h2>
         <h4>روی  دکمه زیر کلیک کن</h4>
-        <button class="btn  butn text-white">شروع</button>
+        <a asp-controller="exam" asp-action="ShowExamGroups" class="btn  butn text-white">شروع</a>
     </div>
 </div>
 
@@ -87,7 +87,7 @@
             <div class="col-12 col-md-6 introduction-text">
                 <p class="mx-5 mt-5">
                     آزمونک جهت بهینه سازی و صرفه جویی در مصرف بیش از <br>حد کاغذ این بستر را برای شما فراهم آورده است
-                    که بدون استفاده از کاغذ یتوانید آزمون های از پیش تعیین شده  خود را در این محیط به سرانجام برسانید
+                    که بدون استفاده از کاغذ بتوانید آزمون های از پیش تعیین شده  خود را در این محیط به سرانجام برسانید
                     و همگی با هم در حفظ محیط زیست کوشا باشیم
                 </p>
             </div>
