--- a/Azmoonak/Areas/Admin/Views/Questions/Details.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Questions/Details.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="text-center">
-    <h4 id="edit-mode" class="text-center text-white rounded-3 p-1" hidden></h4>
+    <h4  id="edit-mode" class="text-center text-white rounded-3 p-1 mt-3" hidden></h4>
     <hr />
     <dl class="row alert alert-info col-md-6 col-12 ">
         <dt class="col-sm-4">
