--- a/Azmoonak/Areas/Admin/Views/Shared/_PanelLayout.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Shared/_PanelLayout.cshtml
@@ -34,7 +34,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a asp-area="admin" asp-controller="panel" asp-action="GetUsers">
                             <span class="icons">
                                 <i class="fa fa-users fa-lg"></i>
                             </span>
