--- a/Azmoonak/Views/Exam/QuestionPartial.cshtml
+++ b/Azmoonak/Views/Exam/QuestionPartial.cshtml
@@ -22,7 +22,7 @@
                 <input name="[@i].AnThree" value="@Model.ElementAt(i).AnThree" readonly hidden>
                 <input name="[@i].AnFour" value="@Model.ElementAt(i).AnFour" readonly hidden>
                 <input name="[@i].CorrectAn" value="@Model.ElementAt(i).CorrectAn" readonly hidden>
-                <input name="[@i].UserAn" value="@Model.ElementAt(i).UserAn" id='@("result-"+@n)'>
+                <input name="[@i].UserAn" value="@Model.ElementAt(i).UserAn" id='@("result-"+@n)' readonly hidden>
                 <input name="[@i].Group" value="@Model.ElementAt(i).GroupId" readonly hidden>
 
             </div>
