--- a/Azmoonak/Views/Home/BodyPartial.cshtml
+++ b/Azmoonak/Views/Home/BodyPartial.cshtml
@@ -8,13 +8,13 @@
             @{
                 if (User.Identity.IsAuthenticated)
                 {
-                    <a asp-controller="profile" asp-action="Index" class="hover-btn btn-login me-3 border-0 text-white rounded-2">ورود</a>
-                    <a asp-controller="account" asp-action="register" class="hover-btn btn-register me-3 border-0 text-white rounded-2">ثبت نام</a>
+                    <a asp-controller="profile" asp-action="Index" class="hover-btn text-decoration-none btn-login me-3 border-0 text-white rounded-2">ورود</a>
+                    <a asp-controller="account" asp-action="register" class="hover-btn text-decoration-none btn-register me-3 border-0 text-white rounded-2">ثبت نام</a>
                 }
                 else
                 {
-                    <a asp-controller="account" asp-action="login" class="hover-btn btn-login me-3 border-0 text-white rounded-2">ورود</a>
-                    <a asp-controller="account" asp-action="register" class="hover-btn btn-register me-3 border-0 text-white rounded-2">ثبت نام</a>
+                    <a asp-controller="account" asp-action="login" class="hover-btn btn-login text-decoration-none me-3 border-0 text-white rounded-2">ورود</a>
+                    <a asp-controller="account" asp-action="register" class="hover-btn btn-register text-decoration-none me-3 border-0 text-white rounded-2">ثبت نام</a>
                 }
             }
 
@@ -38,7 +38,7 @@
     <div class="gettingStartedguide text-end started">
         <h2>آزمون مورد نظر خودت رو راحت تر پیدا کن</h2>
         <h4>روی  دکمه زیر کلیک کن</h4>
-        <a asp-controller="exam" asp-action="ShowExamGroups" class="btn  butn text-white">شروع</a>
+        <a asp-controller="exam" asp-action="ShowExamGroups" class="btn butn text-white">شروع</a>
     </div>
 </div>
 
@@ -107,16 +107,16 @@
     <div class="container-fluid">
         <div class="row SiteStatus">
             <div class="col text-center align-self-center">
-                <span class="fa fa-user fa-lg status-icons userSpan"></span><br>
-                <h4 class="mt-3">1234+</h4>
+                <span class="fa fa-group  fa-lg status-icons userSpan"></span><br>
+                <h4 class="mt-3">@ViewBag.UserCount</h4>
             </div>
             <div class="col text-center align-self-center">
-                <a href="#"><span class="fa fa-lg status-icons fa-file-pdf-o "></span></a>
-                <h4 class="mt-3">1500+</h4>
+                <a href="#"><span class="fa fa-lg status-icons fa-object-group"></span></a>
+                <h4 class="mt-3">@ViewBag.GroupCount</h4>
             </div>
             <div class="col text-center align-self-center">
-                <a href="#"><span class="fa fa-lg fa-book status-icons"></span></a>
-                <h4 class="mt-3">600+</h4>
+                <a href="#"><span class=" fa fa-lg fa-book status-icons"></span></a>
+                <h4 class="mt-3">@ViewBag.QuestionCount</h4>
             </div>
         </div>
     </div>
